fixed chart not showing up on mobile

--- a/src/components/trader-details/index.css
+++ b/src/components/trader-details/index.css
@@ -21,7 +21,6 @@
 .trader-details-chart {
     height: 100%;
     width: 100%;
-    min-height: 90px;
     margin-bottom: 32px;
 }
 
